--- a/custom_chatbot.ipynb
+++ b/custom_chatbot.ipynb
@@ -6383,7 +6383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -6398,6 +6398,7 @@
     "import sacrebleu\n",
     "\n",
     "def evaluate_bleu_score_sacrebleu(encoder, decoder, searcher, voc, test_data):\n",
+    "    '''Evaluates the BLEU score using the SacreBLEU library and the given test data''' \n",
     "    references = []\n",
     "    candidates = []\n",
     "\n",
@@ -6415,7 +6416,7 @@
     "    bleu = sacrebleu.corpus_bleu(candidates, references)\n",
     "    return bleu.score\n",
     "\n",
-    "# Example usage\n",
+    "# Evaluate BLEU score\n",
     "bleu_score = evaluate_bleu_score_sacrebleu(encoder, decoder, GreedySearchDecoder(encoder, decoder), voc, test_data_bleu)\n",
     "print(f\"BLEU score: {bleu_score}\")"
    ]
@@ -6429,11 +6430,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
     "def collect_responses(encoder, decoder, searcher, voc, sentences):\n",
+    "    '''Collects responses to a list of sentences using the encoder, decoder, searcher, and vocabulary'''\n",
     "    responses = []\n",
     "    for sentence in sentences:\n",
     "        normalized_sentence = normalize_string(sentence)\n",
@@ -6516,21 +6518,31 @@
     "    \"what are the rules of chess?\",\n",
     "    \"can you suggest a hobby?\"\n",
     "]\n",
-    "\n",
-    "responses = collect_responses(encoder, decoder, searcher, voc, test_sentences)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "responses = collect_responses(encoder, decoder, searcher, voc, test_sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_ngrams(tokens, n):\n",
-    "    ngrams = zip(*[tokens[i:] for i in range(n)])\n",
+    "    '''Generates n-grams from a list of tokens'''\n",
+    "    ngrams = zip(*[tokens[i:] for i in range(n)]) # Use zip function to help generate n-grams\n",
     "    return [' '.join(ngram) for ngram in ngrams]\n",
     "\n",
     "def calculate_distinct_n(responses, n):\n",
+    "    '''Calculates the distinct n-gram ratio for a list of responses and a given value of n'''\n",
     "    all_ngrams = []\n",
     "    for response in responses:\n",
     "        tokens = response.split()\n",
@@ -6544,7 +6556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -6558,6 +6570,7 @@
     }
    ],
    "source": [
+    "# Calculate Distinct-1 and Distinct-2 scores\n",
     "distinct_1 = calculate_distinct_n(responses, 1)\n",
     "distinct_2 = calculate_distinct_n(responses, 2)\n",
     "distinct_3 = calculate_distinct_n(responses, 3)\n",
@@ -6576,31 +6589,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 235,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average ROUGE-1 score: 0.0570\n",
-      "Average ROUGE-2 score: 0.0097\n",
-      "Average ROUGE-L score: 0.0547\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from rouge_score import rouge_scorer\n",
+    "import numpy as np\n",
     "\n",
     "# Compute ROUGE scores\n",
     "def calculate_rouge_scores(test_data_rouge):\n",
-    "    scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True)\n",
+    "    '''Calculates ROUGE scores using the given test data'''\n",
+    "    scorer = rouge_scorer.RougeScorer(['rouge1', 'rouge2', 'rougeL'], use_stemmer=True) # Initialize ROUGE scorer\n",
     "    rouge1_scores = []\n",
     "    rouge2_scores = []\n",
     "    rougeL_scores = []\n",
     "    \n",
     "    for input_sentence, reference_responses in test_data_rouge:\n",
-    "        generated_response = collect_responses(encoder, decoder, searcher, voc, input_sentence)\n",
+    "        generated_response = collect_responses(encoder, decoder, searcher, voc, input_sentence) # Generate response\n",
     "        scores = scorer.score(reference_responses[0], str(generated_response))  # Using the first reference response\n",
     "        \n",
     "        rouge1_scores.append(scores['rouge1'].fmeasure)\n",
@@ -6614,7 +6619,25 @@
     "    \n",
     "    return avg_rouge1, avg_rouge2, avg_rougeL\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average ROUGE-1 score: 0.0570\n",
+      "Average ROUGE-2 score: 0.0097\n",
+      "Average ROUGE-L score: 0.0547\n"
+     ]
+    }
+   ],
+   "source": [
     "# Calculate ROUGE scores for the chatbot responses\n",
     "avg_rouge1, avg_rouge2, avg_rougeL = calculate_rouge_scores(test_data_bleu)\n",
     "print(f\"Average ROUGE-1 score: {avg_rouge1:.4f}\")\n",
